--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "atom-discord",
-  "main": "./index.js",
-  "version": "0.0.1",
+  "main": "./src/index.js",
+  "version": "0.0.0",
   "description": "Integrate atom with Discord and show Rich Presence information.",
   "repository": "https://github.com/HelloWorld017/atom-discord",
   "license": "MIT",
   "engines": {
-    "atom": ">0.50.0"
+    "atom": ">=1.0.0 <2.0.0"
   },
   "scripts": {
     "test": "electron dataspy/main.js"
@@ -14,7 +14,6 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "discord-rpc": "^3.0.0-beta.2",
-    "is-regex": "^1.0.4",
     "winreg": "^1.2.4"
   }
 }
