Added ui, custom project name per project

--- a/package.json
+++ b/package.json
@@ -8,7 +8,28 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
+  "scripts": {
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "dev": "webpack-dev-server"
+  },
   "dependencies": {
-    "discord-rpc": "^3.0.0-beta.10"
+    "discord-rpc": "^3.0.0-beta.10",
+    "vue": "^2.5.16",
+    "vue-ripple-directive": "^2.0.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "less": "^3.0.2",
+    "less-loader": "^4.1.0",
+    "vue-loader": "^14.2.2",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   }
 }
