--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "webpack-dev-server"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "discord-rpc": "^3.0.1",
     "vue": "^2.5.16",
     "vue-ripple-directive": "^2.0.1"
@@ -21,6 +22,8 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
